[gd_scene load_steps=2 format=3 uid="uid://dusgc3uarpow2"]

[ext_resource type="Script" path="res://src/menu_ui/pause_menu/home/home.gd" id="1_wuob2"]

[node name="Home" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wuob2")

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -300.0
offset_right = 85.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 1

[node name="TitleLabel" type="Label" parent="Content"]
layout_mode = 2
theme_type_variation = &"Header2"
theme_override_font_sizes/font_size = 38
text = "Paused"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Content"]
layout_mode = 2

[node name="BtnResume" type="Button" parent="Content/Buttons"]
layout_mode = 2
text = "Resume"

[node name="BtnRestart" type="Button" parent="Content/Buttons"]
layout_mode = 2
text = "Restart"

[node name="BtnControls" type="Button" parent="Content/Buttons"]
layout_mode = 2
text = "Controls"

[node name="BtnSettings" type="Button" parent="Content/Buttons"]
layout_mode = 2
text = "Settings"

[node name="BtnQuit" type="Button" parent="Content/Buttons"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Content/Buttons/BtnResume" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="Content/Buttons/BtnRestart" to="." method="_on_btn_restart_pressed"]
[connection signal="pressed" from="Content/Buttons/BtnControls" to="." method="_on_btn_controls_pressed"]
[connection signal="pressed" from="Content/Buttons/BtnSettings" to="." method="_on_btn_settings_pressed"]
[connection signal="pressed" from="Content/Buttons/BtnQuit" to="." method="_on_btn_quit_pressed"]
